# virtue-lang

./: Cargo.toml  LICENSE
.github/workflows/: ci.yaml
misc/completions/: virtue.fish
src/: ast.rs  codegen.rs  error.rs  hir.rs  interpreter.rs  lib.rs  main.rs  parser.rs  std.virtue  typecheck.rs  util.rs  vir.rs
src/codegen/: c.rs  llvm.rs  qbe.rs
src/error/: github_actions.rs  terminal.rs
src/typecheck/: std.rs  std.virtue
tests/: ackermann.stdout  ackermann.virtue  arithmetic.stdout  arithmetic.virtue  array-trivial.virtue  array.virtue  collatz.stdout  collatz.virtue  comment.virtue  empty-line-in-block.virtue  factorial-20.virtue  factorial-iteration.virtue  factorial-recursion.virtue  function.virtue  hello-world.virtue  manual-print-int.virtue  parentheses.virtue  perfect-numbers.virtue  predicates.virtue  primes.virtue  print-integer.virtue  run.rs  string-escape-newline.virtue  string-length.virtue  string.virtue  struct-trivial.virtue  struct.stdout  struct.virtue  syscall.virtue
tests/fail/: add-int-string.virtue  add-list-types.virtue  array-repeat-length-type.virtue  field-does-not-exist.virtue  for-types.virtue  function-arg-count.virtue  function-arg-types.virtue  function-does-not-exist.virtue  function-return-type.virtue  if-condition-type.virtue  increment-type.virtue  list-index-assign-type.virtue  list-literal-types.virtue  list-repeat-length-type.virtue  no-double-type-error.virtue  parse-error-001.virtue  parse-error-002.virtue  parse-error-003.virtue  parse-error-004.virtue  parse-error-005.virtue  parse-error-006.virtue  parse-error-007.virtue  reassignment-type.virtue  string-index-assign-type.virtue  struct-does-not-exist.virtue  (+4 more)
(+43 files in other folders)
