[package]
name = "virtue"
version = "0.0.0"
edition = "2024"

[features]
default = ["c", "llvm", "qbe"]
c = []
llvm = ["dep:inkwell"]
qbe = ["dep:qbe"]

[dependencies]
inkwell = { version = "0.6", features = ["llvm18-1"], optional = true }
memfd = "0.6"
nom = "8.0"
qbe = { git = "https://github.com/unneon/qbe-rs", optional = true }

[dev-dependencies]
libtest-mimic = "0.8"

[lib]
test = false
doctest = false

[[bin]]
name = "virtue"
test = false

[[test]]
name = "test"
path = "tests/run.rs"
harness = false
