[package]
name = "virtue"
version = "0.0.0"
edition = "2024"

[features]
default = ["c", "llvm", "qbe"]
c = []
llvm = ["dep:inkwell"]
qbe = ["dep:qbe"]

[dependencies]
inkwell = { version = "0.6", features = ["llvm18-1", "target-x86"], default-features = false, optional = true }
memfd = "0.6"
nom = "8.0"
qbe = { git = "https://github.com/garritfra/qbe-rs", rev = "5af7c7fc12351dfc4d333cb63d59fd03d5e1f70b", optional = true }

[dev-dependencies]
libtest-mimic = "0.8"

[lib]
test = false
doctest = false

[[bin]]
name = "virtue"
test = false

[[test]]
name = "test"
path = "tests/run.rs"
harness = false
